# scrapers

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile.airflow  Dockerfile.airflow-standalone  Dockerfile.server  README.md  airflow-compose.yaml  airflow-requirements.txt  api-compose.yaml  compose.yaml  contributing.html  datamodels.html  devenv.nix  devenv.yaml  docker-compose.yml  example.env  flake.nix  genindex.html  index.html  modules.html  noxfile.py  objects.inv  openpuc_scrapers.html  openpuc_scrapers.models.html  openpuc_scrapers.scrapers.html  package.json  pnpm-lock.yaml  proompt.md  py-modindex.html  pyproject.toml  scrapers.html  search.html  searchindex.js  standalone-entrypoint.sh  test_il_scraper.py  test_il_scraper_full.py
.doctrees/: contributing.doctree  datamodels.doctree  environment.pickle  index.doctree  modules.doctree  openpuc_scrapers.doctree  openpuc_scrapers.models.doctree  openpuc_scrapers.scrapers.doctree  scrapers.doctree
.github/ISSUE_TEMPLATE/: new-scraper.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  nox.yml
_sources/: contributing.rst.txt  datamodels.rst.txt  index.rst.txt  openpuc_scrapers.models.rst.txt  scrapers.rst.txt
ai-metaprogramming/: Dockerfile  compose.yaml  create-scrape-script.py  create-scraper-script.py  create_scraper_script.py  final_recombine_prompt.md  generic_adapters_prompt.md  initial_recognisance_prompt.md  make-component-prompt.md  refactor_prompt.md  requirements.txt  write_generic_adapters_prompt.md
ai-metaprogramming/prompts/: final_python_template.py  final_recombine_prompt.md  generic_adapters_prompt.md  initial_recognisance_prompt.md  make_scraper_prompt.md  refactor_prompt.md
ai-metaprogramming/tests/: test_templates.py
airflow_dags/: all_cases_dag.py  generate_all_dags.py  latest_cases_dag.py  run_scraper.py
docs/: planning.md  refactor_plan.md
docs/prompts/: final_rust_refactor.md  initial_rust_refactor.md
docs/source/: conf.py  index.rst  modules.rst  openpuc_scrapers.rst  openpuc_scrapers.scrapers.rst
downloader_api/: Cargo.toml  Dockerfile  ingest_attachments_to_pg.py
downloader_api/docs/: routes-api.md  traits-processing.md
downloader_api/src/: case_worker.rs  main.rs  s3_stuff.rs
js_scrapers/: README.md  cli_runner.ts  constants.ts  convert_ny_puc_json.js  cypress.config.js  cypress.config.ts  devenv.nix  load-data.py  main.nix  make_computed_views.py  new_table_instructions.md  node-packages.nix  package-lock.json  package.json  pipeline.ts  pnpm-lock.yaml  schema.py  test.md  tsconfig.json  types.ts
js_scrapers/archived_scripts/: load-data.ts  make_computed_views.py  utah_schema.py
js_scrapers/cypress/: tsconfig.json
js_scrapers/playwright/: co_puc_scraper.copied-spec.ts  grand_scraper.spec.ts  ny_puc_scraper.spec.ts  prompt.md  test.json  utah_coal_data_analyzer.ts  utah_coal_files_scraper.spec.ts  utah_coal_grand_scraper.spec.ts  utah_coal_mine_scraper.spec.ts
openpuc_scrapers/dags/: all_cases_dag.py  basic_dags.py
openpuc_scrapers/db/: airflow_basemodel.py  llm_utils.py  s3_utils.py  s3_wrapper.py  sql_utilities.py
openpuc_scrapers/models/: __init__.py  attachment.py  case.py  constants.py  filing.py  generic.py  generic_scraper.py  hashes.py  jurisdictions.py  misc.py  networking.py  raw_attachments.py  rfc3999_timestamp.py  state.py  test_hashes.py  timestamp.py  utils.py
openpuc_scrapers/nypuc/: README.md  all_cases.html  already_processed.json  requirements-unlocked.txt  requirements.txt
openpuc_scrapers/pipelines/: flyte_pipeline_wrappers.py  flyte_wrapper.py  generic_pipeline.py  generic_pipeline_wrappers.py  helper_utils.py  il.py  misc_testing.py  raw_attachment_handling.py  s3_utils.py  test_il.py  test_ny.py
openpuc_scrapers/scrapers/: __init__.py  base.py  dummy.py  il.py  il_puc.py  ma.py  ma_puc.py  ma_puc_legacy.py  ny.py  ny_puc.py  scraper_lookup.py  ut_dogm.py  utah_bogm.md  utah_bogm.py
openpuc_scrapers/server/: app.py  fetch_attachment_utils.py  main.py  routes.py
openpuc_scrapers_py/models/: hashes.py  jurisdictions.py  timestamp.py  utils.py
openpuc_scrapers_py/pipelines/: generic_pipeline_wrappers.py  helper_utils.py
openpuc_scrapers_py/scrapers/: il_puc.py
openscraper_processing/: Cargo.toml  Dockerfile  grab_utah_and_run.py
openscraper_processing/src/: api_documentation.rs  case_worker.rs  main.rs  s3_stuff.rs  worker.rs
openscraper_processing/src/common/: api_documentation.rs  file_extension.rs  mod.rs  otel_tracing.rs  s3_generic.rs  task_workers.rs
openscraper_processing/src/common/misc/: mod.rs
openscraper_processing/src/common/tasks/: mod.rs  routing.rs  workers.rs
openscraper_processing/src/misc/: internet_check.rs  mod.rs  otel_setup.rs
openscraper_processing/src/processing/: attachments.rs  file_fetching.rs  mod.rs  test.rs
openscraper_processing/src/server/: direct_file_fetch.rs  mod.rs  queue_routes.rs  s3_routes.rs  scraper_check_completed.rs
openscraper_processing/src/types/: data_processing_traits.rs  deduplication.rs  env_vars.rs  file_extension.rs  hash.rs  mod.rs  openscraper_data_traits.rs  openscraper_types.rs  s3_uri.rs
openscraper_types/: Cargo.toml
openscraper_types/src/: deduplication.rs  env_vars.rs  lib.rs  main.rs  raw.rs  s3_stuff.rs
outputs/utah_coal_mines/: C0070001.json  C0070002.json  C0070003.json  C0070004.json  C0070005.json  C0070006.json  C0070007.json  C0070009.json  C0070010.json  C0070011.json  C0070012.json  C0070013.json  C0070014.json  C0070016.json  C0070017.json  C0070018.json  C0070019.json  C0070020.json  C0070021.json  C0070022.json  C0070033.json  C0070034.json  C0070035.json  C0070038.json  C0070039.json  C0070040.json  C0070041.json  C0070042.json  C0070045.json  C0070046.json  C0070047.json  C0150001.json  C0150002.json  C0150003.json  C0150004.json  C0150007.json  C0150008.json  C0150009.json  C0150015.json  C0150017.json  (+73 more)
processing_api/: Cargo.toml
processing_api/src/: s3_stuff.rs
prompts/: tmp.md
test-results/: .last-run.json
uploader_api/: Cargo.toml  devenv.nix  devenv.yaml
(+102 files in other folders)
