[project]
name = "openpuc-scrapers"
version = "0.1.0"
description = "Web scrapers for open-access PUC data"
readme = "README.md"
authors = ["Charles Dawson <charles.dwsn@gmail.com>"]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "beautifulsoup4>=4.13.3",
    "crawl4ai>=0.5.0.post8",
    "fastapi>=0.115.12",
    "flytekit>=1.15.3",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.20",
    "pugsql>=0.3.5",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "scrapegraphai>=1.44.0",
    "selenium>=4.29.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
