[project]
name = "openpuc-scrapers"
version = "0.1.0"
description = "Web scrapers for open-access PUC data"
readme = "README.md"
authors = [
    {name = "Charles Dawson", email = "charles.dwsn@gmail.com"},
    {name = "Nicole Venner", email = "n@mycor.io"},
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "crawl4ai>=0.5.0.post8",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.20",
    "psycopg2-binary>=2.9.10",
    "pugsql>=0.3.5",
    "pydantic>=2.10.6",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.19",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "scrapegraphai>=1.44.0",
    "selenium>=4.29.0",
    "uvicorn>=0.34.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
