[project]
name = "openpuc-scrapers"
version = "0.1.0"
description = "Web scrapers for open-access PUC data"
readme = "README.md"
authors = [
    {name = "Charles Dawson", email = "charles.dwsn@gmail.com"},
    {name = "Nicole Venner", email = "n@mycor.io"},
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "boto3>=1.37.37",
    "faker>=37.1.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.19",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "sqlalchemy>=2.0.40",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
