[package]
name = "openscraper_processing"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
aide = { version = "0.14.2", features = ["axum", "axum-json", "axum-matched-path", "axum-multipart", "axum-query", "swagger"] }
aws-sdk-s3 = "1.85.0"
aws-config = "1.6.2"
tracing = "0.1.41"
