[package]
name = "openscraper_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
blake2 = "0.10.6"
base64 = "0.22.1"
serde_json = "1.0.121"
chrono = { version = "0.4.39", features = ["now", "serde"] }

axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
aide = { version = "0.15", features = ["axum", "axum-extra", "axum-extra-query", "axum-json", "axum-matched-path", "axum-multipart", "axum-query", "macros", "swagger"] }
schemars = { version = "0.9", features = ["chrono04", "uuid1"] }
aws-sdk-s3 = "1.85.0"
aws-config = "1.6.2"

anyhow = "1.0.98"
hex = "0.4.3"
rand_core = "0.9.3"
rand = "0.9.1"
thiserror = "2.0.12"
hyper = "1.6.0"
futures-util = "0.3.31"



tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.30"
opentelemetry = { version = "0.29.1", features = ["trace"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.29.0"
axum-tracing-opentelemetry = "0.28.0"
init-tracing-opentelemetry = { version = "0.28.1", features = ["tracing_subscriber_ext"] }
