[package]
name = "openscraper_types"
version = "0.1.0"
edition = "2024"

[dependencies]

non-empty-string = {git = "https://github.com/mycorrhiza-inc/non-empty-string.git", branch="add-schemars-support", features = ["serde", "schemars09", "macros"]}
mycorrhiza_common = {path = "../../common-rs", features = ["all"]}
# mycorrhiza_common = {git = "https://github.com/mycorrhiza-inc/common-rs.git", features = ["all"]}

reqwest = { version = "0.12.5", features = ["json"] }
blake2 = "0.10.6"
base64 = "0.22.1"
serde_json = "1.0.121"
chrono = { version = "0.4.39", features = ["now", "serde"] }

axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
aide = { version = "0.15", features = ["axum", "axum-extra", "axum-extra-query", "axum-json", "axum-matched-path", "axum-multipart", "axum-query", "macros", "swagger"] }
schemars = { version = "0.9", features = ["chrono04", "uuid1"] }
aws-sdk-s3 = "1.85.0"
aws-config = "1.6.2"

anyhow = "1.0.98"
hex = "0.4.3"
rand_core = "0.9.3"
rand = "0.9.1"
thiserror = "2.0.12"
hyper = "1.6.0"
futures-util = "0.3.31"



tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.31"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.30.0"
axum-tracing-opentelemetry = "0.29.0"
init-tracing-opentelemetry = { version = "0.30.0", features = ["tracing_subscriber_ext"] }
url = "2.5.4"
urlencoding = "2.1.3"
serde_with = "3.14.0"
async-trait = "0.1.88"
tower-http = { version = "0.6.6", features = ["cors"] }
hostname = "0.4.1"
rkyv = { version = "0.8.11", features = ["aligned", "alloc"] }
